--- a/siw-ricettario-VDL-FF/src/main/resources/application.properties
+++ b/siw-ricettario-VDL-FF/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/siwricettario
 spring.datasource.username=postgres
